--- a/app/src/main/res/layout/activity_artist_info.xml
+++ b/app/src/main/res/layout/activity_artist_info.xml
@@ -13,6 +13,7 @@
         android:layout_height="150dp" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerSong"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/item_artist"
