--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -58,5 +58,15 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="91dp"
             android:layout_marginEnd="65dp" />
+
+        <TextView
+            android:id="@+id/idRank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="-346dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="40dp" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
