--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/imageSong"
             android:layout_marginStart="16dp"
-            android:text="@string/nombre"
+            android:text="@string/nombreCancion"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="@android:color/white" />
