--- a/app/src/main/res/layout/activity_artist_info.xml
+++ b/app/src/main/res/layout/activity_artist_info.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#212121"
-    tools:context=".ArtistInfoActivity">
+    tools:context=".Songs.SongActivity">
 
     <include
         android:id="@+id/item_artist"
