--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#212121"
+    android:background="@color/gray_background"
     tools:context=".main.MainActivity">
 
     <TextView
@@ -14,17 +13,33 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
-        android:textColor="#b3b3b3"
+        android:textColor="@color/white"
         android:text="@string/titleArtists"
+        android:textStyle="bold"
         android:textSize="30sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerArtists"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/footerTextView"
+        android:layout_below="@id/textView"
         android:layout_marginTop="30dp"
         android:clipChildren="true"
         android:clipToPadding="false"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/footerTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="@string/Author"
+        android:textSize="16sp"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:padding="16dp"
+        android:background="#EEEEEE" />
+</RelativeLayout>
