--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="#121212"
+    app:cardBackgroundColor="@color/dark_background"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true">
@@ -14,13 +14,14 @@
         android:layout_height="match_parent"
         android:padding="16dp">
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/imageArtist"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginStart="16dp"
             android:layout_centerVertical="true"
-            android:contentDescription="@string/imagen_artista" />
+            android:contentDescription="@string/imagen_artista"
+            app:riv_corner_radius="40dp" />
 
         <TextView
             android:id="@+id/textArtist"
@@ -28,16 +29,14 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="16dp"
             android:layout_toEndOf="@id/imageArtist"
             android:text="@string/nombre"
-            android:textColor="#FFFFFF"
-            android:textSize="11sp"
-            />
+            android:textColor="@color/white_subtitles"
+            android:textSize="11sp" />
 
         <TextView
             android:id="@+id/nameArtist"
-            android:layout_width="200dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/textArtist"
             android:layout_marginStart="20dp"
@@ -55,12 +54,12 @@
             android:layout_marginTop="8dp"
             android:layout_toEndOf="@id/imageArtist"
             android:text="@string/oyentes"
-            android:textColor="#FFFFFF"
-            android:textSize="11sp"/>
+            android:textColor="@color/white_subtitles"
+            android:textSize="11sp" />
 
         <TextView
             android:id="@+id/listenersArtist"
-            android:layout_width="200dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/textlistener"
             android:layout_marginStart="20dp"
@@ -69,15 +68,33 @@
             android:textSize="16sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/idRank"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="45dp"
-            android:layout_marginEnd="40dp"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp" />
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/listenersArtist">
+
+            <ImageView
+                android:id="@+id/imageStart"
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                app:srcCompat="@android:drawable/btn_star_big_on"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:id="@+id/idRank"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="21dp"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
