--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
-    app:cardBackgroundColor="#535353"
+    app:cardBackgroundColor="@color/dark_card_song_background"
     app:cardUseCompatPadding="true"
     app:cardElevation="4dp">
 
@@ -13,12 +13,15 @@
         android:layout_height="match_parent"
         android:padding="16dp">
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/imageSong"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            app:riv_corner_radius="15dp" />
+
+
 
         <TextView
             android:id="@+id/title1TextView"
@@ -28,7 +31,7 @@
             android:layout_marginStart="16dp"
             android:text="@string/nombreCancion"
             android:textSize="12sp"
-            android:textColor="@android:color/white" />
+            android:textColor="@color/gray_background" />
 
         <TextView
             android:id="@+id/title2TextView"
@@ -40,7 +43,7 @@
             android:layout_marginStart="16dp"
             android:text="@string/reproducciones"
             android:textSize="12sp"
-            android:textColor="@android:color/white" />
+            android:textColor="@color/gray_background" />
 
         <TextView
             android:id="@+id/title3TextView"
@@ -52,7 +55,7 @@
             android:layout_marginStart="16dp"
             android:text="@string/oyentes"
             android:textSize="12sp"
-            android:textColor="@android:color/white" />
+            android:textColor="@color/gray_background" />
 
         <TextView
             android:id="@+id/nameSong"
@@ -60,10 +63,10 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/title1TextView"
             android:layout_alignBaseline="@id/title1TextView"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="12dp"
             android:textSize="14sp"
             android:textStyle="bold"
-            android:textColor="@android:color/darker_gray" />
+            android:textColor="@color/dark_background" />
 
         <TextView
             android:id="@+id/playSong"
@@ -71,10 +74,10 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/title2TextView"
             android:layout_alignBaseline="@id/title2TextView"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="12dp"
             android:textSize="14sp"
             android:textStyle="bold"
-            android:textColor="@android:color/darker_gray" />
+            android:textColor="@color/dark_background" />
 
         <TextView
             android:id="@+id/lisenSong"
@@ -82,10 +85,10 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/title3TextView"
             android:layout_alignBaseline="@id/title3TextView"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="12dp"
             android:textSize="14sp"
             android:textStyle="bold"
-            android:textColor="@android:color/darker_gray" />
+            android:textColor="@color/dark_background" />
 
     </RelativeLayout>
 
